--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <!-- GAME SHOW APP -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="../Project-6-GameShowApp/index.html" class="d-flex">
+                    <a href="https://hamzashaikh123.github.io/GameShowApp/" class="d-flex">
                         <img src="images/projects/HangmanGameApp.png" alt="Guessing Game" class="project-icons justify-content-center">
                     </a>  
                 </div>
