--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@
             <!-- GAME SHOW APP -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="https://hamzashaikh123.github.io/GameShowApp" class="d-flex">
-                        <img src="images/projects/HangmanGameApp.png" alt="Guessing Game" class="project-icons justify-content-center">
-                    </a>  
+                    <img src="images/projects/HangmanGameApp.png" alt="Guessing Game" class="project-icons justify-content-center">
                 </div>
                 <div class="project-overlay">
                     <p>Hangman Game App</p>
@@ -263,6 +261,9 @@
                         <li>JavaScript</li>
                         <li>HTML</li>
                     </ul>
+                    <a href="https://hamzashaikh123.github.io/GameShowApp" class="d-flex">
+                        <button>click to see</button>
+                    </a>  
                 </div>
             </div>
             <!-- WEB DASHBOARD APP -->
