--- a/index.html
+++ b/index.html
@@ -212,20 +212,21 @@
             <!-- INTERACTIVE PHOTO GALLERY -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="../Project-5-InteractivePhotoGallery/index.html">
-                        <img src="images/projects/PhotoGallery.png" alt="Photo Gallery" class="project-icons justify-content-center">
-                    </a>
+                    <img src="images/projects/PhotoGallery.png" alt="Photo Gallery" class="project-icons justify-content-center">
                 </div>
                 <div class="project-overlay">
                     <p>Interactive Photo Gallery</p>
                     <p>A photo gallery app implemented with a Lightbox and searchable based on keywords.</p>
                     <p>Skills Developed:</p>
-                    <ul>
-                        <li>JavaScript</li>
-                        <li>JQuery Plug-In Implementation</li>
-                        <li>CSS</li>
-                        <li>HTML</li>
+                    <ul class="row">
+                        <li class="col-6">JavaScript</li>
+                        <li class="col-6">JQuery Plug-In Implementation</li>
+                        <li class="col-6">CSS</li>
+                        <li class="col-6">HTML</li>
                     </ul>
+                    <a href="https://hamzashaikh123.github.io/InteractivePhotoGallery/">
+                        <button>click to see</button>
+                    </a>
                 </div>
             </div>
             <!-- ONLINE REGISTRATION FORM -->
@@ -269,9 +270,7 @@
             <!-- WEB DASHBOARD APP -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="../Project-7-WebAppDashboard/index.html" class="d-flex">
-                        <img src="images/projects/dashboard.png" alt="Web App Dashboard" class="project-icons justify-content-center">
-                    </a>
+                    <img src="images/projects/dashboard.png" alt="Web App Dashboard" class="project-icons justify-content-center">
                 </div>
                 <div class="project-overlay">
                     <p>WebApp Dashboard</p>
@@ -286,6 +285,9 @@
                         <li class="col-4">CSS Flexbox</li>
                         <li class="col-4">HTML</li>
                     </ul>
+                    <a href="https://hamzashaikh123.github.io/WebAppDashboard/" class="d-flex">
+                        <button>click to see</button>
+                    </a>
                 </div>
             </div>
             <!-- EMPLOYEE DIRECTORY API -->
@@ -312,9 +314,7 @@
             <!-- WEB STYLE GUIDE -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="../Project4-WebStyleGuide/index.html" class="d-flex">
-                        <img src="images/projects/WebStylesGuide.png" alt="Web Styles Guide" class="project-icons justify-content-center">
-                    </a>  
+                    <img src="images/projects/WebStylesGuide.png" alt="Web Styles Guide" class="project-icons justify-content-center">
                 </div> 
                 <div class="project-overlay">
                     <p>Web Style Guide</p>
@@ -325,6 +325,10 @@
                         <li>CSS</li>
                         <li>HTML</li>
                     </ul>
+                    <a href="https://hamzashaikh123.github.io/WebStyleGuide/" class="d-flex">
+                        <button>click to see</button>
+                    </a>
+
                 </div>
 
             </div>                   
