all project links updated

--- a/index.html
+++ b/index.html
@@ -232,9 +232,7 @@
             <!-- ONLINE REGISTRATION FORM -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="../Project-3-OnlineRegistrationForm/index.html" class="d-flex">
-                        <img src="images/projects/FormProject.png" alt="Online Registration Form" class="project-icons justify-content-center">
-                    </a>
+                    <img src="images/projects/FormProject.png" alt="Online Registration Form" class="project-icons justify-content-center">
                 </div>
                 <div class="project-overlay">
                     <p>Online Registration Form</p>
@@ -245,6 +243,10 @@
                         <li>CSS Media Queries</li>
                         <li>HTML</li>
                     </ul>
+                    <a href="https://hamzashaikh123.github.io/OnlineRegistrationForm/" class="d-flex">
+                        <button>click to see</button>
+                    </a>
+
                 </div>
             </div>
             <!-- GAME SHOW APP -->
@@ -293,9 +295,7 @@
             <!-- EMPLOYEE DIRECTORY API -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
-                    <a href="../Project-8-EmployeeDirectoryAPI/index.html" class="d-flex">
-                        <img src="images/projects/EmployeeDirectory.png" alt="Employee API Directory" class="project-icons justify-content-center">
-                    </a>
+                    <img src="images/projects/EmployeeDirectory.png" alt="Employee API Directory" class="project-icons justify-content-center">
                 </div>
                 <div class="project-overlay">
                     <p>Employee API Directory</p>
@@ -309,6 +309,9 @@
                         <li class="col-4">CSS Flexbox</li>
                         <li class="col-4">HTML</li>
                     </ul>
+                    <a href="https://hamzashaikh123.github.io/EmployeeDirectoryAPI/" class="d-flex">
+                        <button>click to see</button>
+                    </a>
                 </div>
             </div>
             <!-- WEB STYLE GUIDE -->
