--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <title>Hamza Shaikh's Portfolio</title>
   </head>
   <body>
-    <div class="col-1 px-0 flex-column d-flex sidenav">
+    <div class="d-none d-md-block col-md-2 sidenav">
         <a class="pl-2" href="#top"> 
             <p>Hamza Shaikh</p>
-            <p>Aspiring CPA, Front End Developer</p>
+            <p>Front-End Developer</p>
         </a>
         <a class="list-item" href="#about">About</a>
         <a class="list-item" href="#work-exp">Work Experience</a>
@@ -25,7 +25,7 @@
         <a class="list-item" href="#skill">Skills</a>
         <a class="list-item" href="#contact">Contact</a>
     </div>
-    <div class="col-11 main">
+    <div class="col-md-10 col-xs-12 main">
         <div class="main-title text-sm-center mb-5">
             <h3 class="display-3">Hi, I'm Hamza Shaikh </h3>
             <h5 class="">CPA (in-progress), Entrepreneur, Front-End Web Developer </h5>
@@ -87,14 +87,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="photo-overlay-EY d-flex">
-                        <img src="images/workexp/coverphotos/EY-logo-background.png" alt="company placeholder" class="overlay-EY">
+                    <div class="photo-overlay-EY d-sm-flex d-none">
+                        <img src="images/workexp/coverphotos/EY-logo-background.png" alt="company placeholder" class="overlay-EY align-self-center">
                         <p class="slider-icon-left-EY"><<</p>
                         <p class="slider-icon-right-EY">>></p>
                     </div>
                 </div>
-            </div>
-            
+            </div>           
             <!-- END Intermediate Staff Accountant Section -->
         
             <!-- Staff Accountant Section -->
@@ -143,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="photo-overlay-EY d-flex">
+                    <div class="photo-overlay-EY d-sm-flex d-none">
                         <img src="images/workexp/coverphotos/EY-logo-background.png" alt="company placeholder" class="overlay-EY">
                         <p class="slider-icon-left-EY"><<</p>
                         <p class="slider-icon-right-EY">>></p>
@@ -198,7 +197,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="photo-overlay-LA d-flex">
+                    <div class="photo-overlay-EY d-sm-flex d-none">
                         <img src="images/workexp/coverphotos/LimitlessAthletics.png" alt="company placeholder" class="overlay-LA">
                         <p class="slider-icon-left-LA"><<</p>
                         <p class="slider-icon-right-LA">>></p>
