media queries update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="photo-container">
                 <div class="photo slide">
                     <div class="card">
-                        <div class="card-header d-flex">
+                        <div class="card-header d-flex flex-wrap">
                             <img src="images/EYlogo.svg" alt="EY Logo" class="logo align-self-center">
                             <p class="align-self-end EY-title">EY Canada</p>
                             <p class="ml-auto align-self-end">Intermediate Staff Accountant</p>
@@ -100,10 +100,10 @@
             <div class="photo-container">
                 <div class="photo slide">
                     <div class="card">
-                        <div class="card-header d-flex">
+                        <div class="card-header d-flex flex-wrap">
                             <img src="images/EYlogo.svg" alt="EY Logo" class="logo align-self-center">
-                            <p class="align-self-end EY-title">EY Canada</p>
-                            <p class="ml-auto align-self-end">Staff Accountant</p>
+                            <p class="align-self-md-end EY-title">EY Canada</p>
+                            <p class="ml-auto align-self-md-end">Staff Accountant</p>
                         </div>
                         <p>One of the four largest professional service firms in the world, with offices in 132 countries and bare other shit</p>
                         <div class="card-body">
@@ -155,7 +155,7 @@
             <div class="photo-container">
                 <div class="photo slide">
                     <div class="card">
-                        <div class="card-header d-flex">
+                        <div class="card-header d-flex flex-wrap">
                             <img src="images/LimitlessAthletics.png" alt="Limitless Athletics Logo" class="align-self-center" id="LimitlessLogo">
                             <p class="align-self-end LA-title">Limitless Athletics</p>
                             <p class="ml-auto align-self-end">Founder</p>
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="photo-overlay-EY d-sm-flex d-none">
+                    <div class="photo-overlay-LA d-sm-flex d-none">
                         <img src="images/workexp/coverphotos/LimitlessAthletics.png" alt="company placeholder" class="overlay-LA">
                         <p class="slider-icon-left-LA"><<</p>
                         <p class="slider-icon-right-LA">>></p>
