updated media queries

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-md-10 col-xs-12 main">
         <div class="main-title text-sm-center mb-5">
-            <h3 class="display-3">Hi, I'm Hamza Shaikh </h3>
+            <h3 class="display-3 introduction">Hi, I'm Hamza Shaikh </h3>
             <h5 class="">CPA (in-progress), Entrepreneur, Front-End Web Developer </h5>
         </div>
 <!-- ABOUT -->
@@ -207,7 +207,7 @@
         </div>
 <!-- PROJECTS -->
         <h1 id="projects">Projects</h1>
-        <div class="container d-flex flex-wrap">
+        <div class="container center-container d-flex flex-wrap">
             <!-- INTERACTIVE PHOTO GALLERY -->
             <div class= "project-thumbnail">
                 <div class="mb-3 d-flex">
