--- a/index.html
+++ b/index.html
@@ -223,9 +223,7 @@
                         <li class="col-6">CSS</li>
                         <li class="col-6">HTML</li>
                     </ul>
-                    <a href="https://hamzashaikh123.github.io/InteractivePhotoGallery/">
-                        <button>click to see</button>
-                    </a>
+                    <a href="https://hamzashaikh123.github.io/InteractivePhotoGallery/" class="button">Click to see more</a>
                 </div>
             </div>
             <!-- ONLINE REGISTRATION FORM -->
@@ -242,10 +240,7 @@
                         <li>CSS Media Queries</li>
                         <li>HTML</li>
                     </ul>
-                    <a href="https://hamzashaikh123.github.io/OnlineRegistrationForm/" class="d-flex">
-                        <button>click to see</button>
-                    </a>
-
+                    <a href="https://hamzashaikh123.github.io/OnlineRegistrationForm/" class="button">Click to see more</a>
                 </div>
             </div>
             <!-- GAME SHOW APP -->
@@ -263,9 +258,7 @@
                         <li>JavaScript</li>
                         <li>HTML</li>
                     </ul>
-                    <a href="https://hamzashaikh123.github.io/GameShowApp" class="d-flex">
-                        <button>click to see</button>
-                    </a>  
+                    <a href="https://hamzashaikh123.github.io/GameShowApp" class="button">Click to see more</a>  
                 </div>
             </div>
             <!-- WEB DASHBOARD APP -->
@@ -286,9 +279,7 @@
                         <li class="col-4">CSS Flexbox</li>
                         <li class="col-4">HTML</li>
                     </ul>
-                    <a href="https://hamzashaikh123.github.io/WebAppDashboard/" class="d-flex">
-                        <button>click to see</button>
-                    </a>
+                    <a href="https://hamzashaikh123.github.io/WebAppDashboard/" class="button">Click to see more</a>
                 </div>
             </div>
             <!-- EMPLOYEE DIRECTORY API -->
@@ -308,9 +299,7 @@
                         <li class="col-4">CSS Flexbox</li>
                         <li class="col-4">HTML</li>
                     </ul>
-                    <a href="https://hamzashaikh123.github.io/EmployeeDirectoryAPI/" class="d-flex">
-                        <button>click to see</button>
-                    </a>
+                    <a href="https://hamzashaikh123.github.io/EmployeeDirectoryAPI/" class="button">Click to see more</a>
                 </div>
             </div>
             <!-- WEB STYLE GUIDE -->
@@ -327,10 +316,7 @@
                         <li>CSS</li>
                         <li>HTML</li>
                     </ul>
-                    <a href="https://hamzashaikh123.github.io/WebStyleGuide/" class="d-flex">
-                        <button>click to see</button>
-                    </a>
-
+                    <a href="https://hamzashaikh123.github.io/WebStyleGuide/" class="button">Click to see more</a>
                 </div>
 
             </div>                   
