post-validator checks

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     </div>
                     <div class="photo-overlay-EY d-sm-flex d-none">
                         <img src="images/workexp/coverphotos/EY-logo-background.png" alt="company placeholder" class="overlay-EY align-self-center">
-                        <p class="slider-icon-left-EY"><<</p>
-                        <p class="slider-icon-right-EY">>></p>
+                        <p class="slider-icon-left-EY">&lt;&lt;</p>
+                        <p class="slider-icon-right-EY">&gt;&gt;</p>
                     </div>
                 </div>
             </div>           
@@ -144,8 +144,8 @@
                     </div>
                     <div class="photo-overlay-EY d-sm-flex d-none">
                         <img src="images/workexp/coverphotos/EY-logo-background.png" alt="company placeholder" class="overlay-EY">
-                        <p class="slider-icon-left-EY"><<</p>
-                        <p class="slider-icon-right-EY">>></p>
+                        <p class="slider-icon-left-EY">&lt;&lt;</p>
+                        <p class="slider-icon-right-EY">&gt;&gt;</p>
                     </div>
                 </div>
             </div>
@@ -199,8 +199,8 @@
                     </div>
                     <div class="photo-overlay-LA d-sm-flex d-none">
                         <img src="images/workexp/coverphotos/LimitlessAthletics.png" alt="company placeholder" class="overlay-LA">
-                        <p class="slider-icon-left-LA"><<</p>
-                        <p class="slider-icon-right-LA">>></p>
+                        <p class="slider-icon-left-LA">&lt;&lt;</p>
+                        <p class="slider-icon-right-LA">&gt;&gt;</p>
                     </div>
                 </div>
             </div>
