updated background image for mobile responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="list-item" href="#contact">Contact</a>
     </div>
     <div class="col-md-10 col-xs-12 main">
-        <div class="main-title text-sm-center mb-5">
+        <div class="main-title text-sm-center mb-5 img-fluid">
             <h3 class="display-3 introduction">Hi, I'm Hamza Shaikh </h3>
             <h5 class="">CPA (in-progress), Entrepreneur, Front-End Web Developer </h5>
         </div>
