--- a/index.html
+++ b/index.html
@@ -415,6 +415,19 @@
                 </div>
             </div>
         </div>
+<!-- CONTACT -->
+        <h1 id="skill">Contact</h1>
+        <div class="d-flex center-container">
+            <a href="mailto:hamzashaikh1996@gmail.com" target="_blank">
+                <img src="images/contact/gmail.svg" alt="gmail contact info" class="contact-icon">
+            </a>
+            <a href="https://linkedin.com/in/hshaikhh" target="_blank">
+                <img src="images/contact/linkedin.svg" alt="linkedin contact info" class="contact-icon">
+            </a>
+            <a href="https://github.com/hamzashaikh123">
+                <img src="images/contact/logo.svg" alt="github contact info" class="contact-icon">
+            </a>
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
