--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     <title>Hamza Shaikh's Portfolio</title>
   </head>
   <body>
+<!-- NAV BAR (MOBILE)  -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light d-block d-sm-block d-md-none">
+    <a class="navbar-brand" href="#">Hamza Shaikh, Front-End Developer</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#work-exp">Work Experience</a>
+        <a class="nav-item nav-link" href="#projects">Projects</a>
+        <a class="nav-item nav-link " href="#education">Education</a>
+        <a class="nav-item nav-link " href="#skill">Skills</a>
+        <a class="nav-item nav-link " href="#contact">Contact</a>
+      </div>
+    </div>
+  </nav>
+<!-- NAV BAR (NON-MOBILE) -->
     <div class="d-none d-md-block col-md-2 sidenav">
         <a class="pl-2" href="#top"> 
             <p>Hamza Shaikh</p>
@@ -416,8 +434,8 @@
             </div>
         </div>
 <!-- CONTACT -->
-        <h1 id="skill">Contact</h1>
-        <div class="d-flex center-container">
+        <h1 id="contact">Contact</h1>
+        <div class="d-flex center-container flex-wrap justify-content-between">
             <a href="mailto:hamzashaikh1996@gmail.com" target="_blank">
                 <img src="images/contact/gmail.svg" alt="gmail contact info" class="contact-icon">
             </a>
