--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     </div>
   </nav>
 <!-- NAV BAR (NON-MOBILE) -->
-    <div class="nav d-none d-md-block sidenav list-group list-group-flush" id="sidenav">
+    <div class="d-none d-md-block sidenav" id="sidenav">
         <a class="pl-2" href="#top"> 
             <p class="name">Hamza Shaikh</p>
             <p class="name">Front-End Developer</p>
         </a>
-        <a class="list-item list-group-item list-group-item-action" href="#about">About</a>
-        <a class="list-item list-group-item list-group-item-action" href="#work-exp">Work Experience</a>
-        <a class="list-item list-group-item list-group-item-action" href="#projects">Projects</a>
-        <a class="list-item list-group-item list-group-item-action" href="#education">Education</a>
-        <a class="list-item list-group-item list-group-item-action" href="#skill">Skills</a>
-        <a class="list-item list-group-item list-group-item-action" href="#contact">Contact</a>
+        <a class="list-item" href="#about">About</a>
+        <a class="list-item " href="#work-exp">Work Experience</a>
+        <a class="list-item " href="#projects">Projects</a>
+        <a class="list-item " href="#education">Education</a>
+        <a class="list-item " href="#skill">Skills</a>
+        <a class="list-item " href="#contact">Contact</a>
     </div>
     <div class="col-xs-12 main" data-spy="scroll" data-target="#sidenav" data-offset="0" >
         <div id="top"class="main-title text-sm-center mb-5 img-fluid">
