--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <!-- WORK EXPEREINCE -->
             <div class="d-flex">
                 <h1 class="content-heading" id="work-exp">WORK EXPERIENCE</h1>
-                <p class="subheading">Slide for Details</p>
+                <p class="subheading d-none d-md-block">Slide for Details</p>
             </div>
             <section>
                 <!-- Intermediate staff accountant -->
@@ -70,7 +70,7 @@
                         <div class="card">
                             <div class="card-header d-flex flex-wrap">
                                 <p class="align-self-end EY-title">EY Canada</p>
-                                <p class="ml-auto align-self-end job-role">Intermediate Staff Accountant</p>
+                                <p class="ml-auto align-self-end job-role" id="int-staff-acc">Intermediate Accountant</p>
                             </div>
                             <p class= "company-description">With people and operations in more than 150 countries, EY is one of the largest professional service firms in the world. Specializing in Assurance, Consulting, Strategy and Transactions, and Tax, EY is committed to doing it's part in building a better working world. EY is determined to developing outstanding leaders who team to deliver on promises to their stakeholders. In doing so, EY plays a crucial role in building a better working world for their people, clients, and communities.</p>
                             <div class="card-body">
@@ -334,7 +334,7 @@
             <h1 class="content-heading" id="education">EDUCATION</h1>
             <div class="">
                 <!-- GDIP Section -->
-                <div class="card mb-5">
+                <div class="card border-0 mx-2 mb-5">
                     <p class="degree-header">Rotman School of Management</p>
                     <div class="card-body">
                         <p class="degree-title">Graduate Diploma</p>
@@ -344,7 +344,7 @@
                 <!-- GDIP Section END-->
                 
                 <!-- BCOMM UofT Section -->
-                <div class="card mb-5 mt-3">
+                <div class="card border-0 mx-2 mb-5 mt-3">
                     <p class="degree-header">University of Toronto - Rotman Commerce</p>
                     <div class="card-body">
                         <p class="degree-title">Bachelors Degree</p>
@@ -354,7 +354,7 @@
                 <!-- BCOMM UofT Section END -->
 
                 <!-- TEAM TREEHOUSE SECTION -->
-                <div class="card mb-5 mt-3">
+                <div class="card border-0 mx-2 mb-5 mt-3">
                     <p class="degree-header">Team Treehouse</p>
                     <div class="card-body">
                         <p class="degree-title"> Front-End Web Development TechDegreee</p>
