--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- ABOUT -->
         <div class="content">
             <h1 class="content-heading" id="about">ABOUT</h1>
-            <div class="">
+            <div class="container">
                 <p class="mission-statement">A goal-oriented learner always eager to take on new challenges with a passion for innovation and entrepreneurship</p>
                 <p>I'm currently working as an Auditor at EY while pursuing my CPA Designation. On my freetime I'm committed to learning valuable skills that will compliment my designation while also bringing me closer to my true passion of Innovation and Technology.</p>
                 <p>After completing my Front-End Development TechDegreee at TeamTreehouse I plan on learning more complex coding languages (such as: Swift, Java, and React) to transition into Product/App Development. My goal is to enter the Startup World - Either as a Founder or Early Team Member - to really create an impact in the world! </p>
@@ -378,19 +378,19 @@
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/brain.svg" alt="Design Thinking">
                         </div>
-                        <p class="card-title">Design Thinking</p>
+                        <p class="skill-title">Design Thinking</p>
                     </div>
                     <div class="skill-group mb-3">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/excel.svg" alt="Microsoft Excel">
                         </div>
-                        <p class="card-title">Microsoft Excel</p>
+                        <p class="skill-title">Microsoft Excel</p>
                     </div>
                     <div class="skill-group mb-3">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/html-5.svg" alt="HTML 5">
                         </div>
-                        <p class="card-title">HTML 5</p>
+                        <p class="skill-title">HTML 5</p>
                     </div>
                 </div>
                 <div class="large-breakpoint">
@@ -398,19 +398,19 @@
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/interaction.svg" alt="Communication">
                         </div>
-                        <p class="card-title">Communication</p>
+                        <p class="skill-title">Communication</p>
                     </div>
                     <div class="skill-group mb-3">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/javascript.svg" alt="javascript">
                         </div>
-                        <p class="card-title">Javascript</p>
+                        <p class="skill-title">Javascript</p>
                     </div>
                     <div class="skill-group mb-3 ">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/leader.svg" alt="Team leadership">
                         </div>
-                        <p class="card-title">Team Leadership</p>
+                        <p class="skill-title">Team Leadership</p>
                     </div>
                 </div>
                 <div class="large-breakpoint">
@@ -418,19 +418,19 @@
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/computer.svg" alt="Data Analytics">
                         </div>
-                        <p class="card-title">Data Analytics</p>
+                        <p class="skill-title">Data Analytics</p>
                     </div>
                     <div class="skill-group mb-3">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/css.svg" alt="css">
                         </div>
-                        <p class="card-title">CSS</p>
+                        <p class="skill-title">CSS</p>
                     </div>
                     <div class="skill-group mb-3">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/product.svg" alt="Product Design">
                         </div>
-                        <p class="card-title">Product Design</p>
+                        <p class="skill-title">Product Design</p>
                     </div>
 
                 </div>
