removed margin for skills

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
             <h3 class="display-3 introduction">HI, I'M HAMZA SHAIKH </h3>
             <p class="designation">CPA (in-progress), Entrepreneur, Front-End Web Developer </p>
         </div>
-<!-- ABOUT -->
+
         <div class="content">
+<!-- ABOUT -->
             <h1 class="content-heading" id="about">ABOUT</h1>
             <div class="container">
                 <p class="mission-statement">A goal-oriented learner always eager to take on new challenges with a passion for innovation and entrepreneurship</p>
@@ -224,7 +225,7 @@
                 </div>
             </section>
 <!-- PROJECTS -->
-            <h1 class=" content-heading" id="projects">PROJECTS</h1>
+            <h1 class="content-heading" id="projects">PROJECTS</h1>
             <div class="center-container d-flex flex-wrap">
                 <!-- INTERACTIVE PHOTO GALLERY -->
                 <div class= "project-thumbnail">
@@ -374,19 +375,19 @@
             <h1 class="content-heading" id="skill">SKILLS</h1>
             <div class="skill-container">      
                 <div class="large-breakpoint">
-                    <div class="skill-group mb-3">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/brain.svg" alt="Design Thinking">
                         </div>
                         <p class="skill-title">Design Thinking</p>
                     </div>
-                    <div class="skill-group mb-3">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/excel.svg" alt="Microsoft Excel">
                         </div>
                         <p class="skill-title">Microsoft Excel</p>
                     </div>
-                    <div class="skill-group mb-3">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/html-5.svg" alt="HTML 5">
                         </div>
@@ -394,19 +395,19 @@
                     </div>
                 </div>
                 <div class="large-breakpoint">
-                    <div class="skill-group mb-3 ">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/interaction.svg" alt="Communication">
                         </div>
                         <p class="skill-title">Communication</p>
                     </div>
-                    <div class="skill-group mb-3">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/javascript.svg" alt="javascript">
                         </div>
                         <p class="skill-title">Javascript</p>
                     </div>
-                    <div class="skill-group mb-3 ">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/leader.svg" alt="Team leadership">
                         </div>
@@ -414,19 +415,19 @@
                     </div>
                 </div>
                 <div class="large-breakpoint">
-                    <div class="skill-group mb-3 ">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/computer.svg" alt="Data Analytics">
                         </div>
                         <p class="skill-title">Data Analytics</p>
                     </div>
-                    <div class="skill-group mb-3">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/css.svg" alt="css">
                         </div>
                         <p class="skill-title">CSS</p>
                     </div>
-                    <div class="skill-group mb-3">
+                    <div class="skill-group">
                         <div class="d-flex justify-content-center">
                             <img class="skill-icon" src="images/skills/product.svg" alt="Product Design">
                         </div>
