--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skill-icon" src="images/skills/html-5.svg" alt="HTML 5">
+                            <img src="images/workexp/excel.svg" alt="Microsoft Excel" class="skills-logo">
                         </div>
                         <p class="skill-title">HTML 5</p>
                     </div>
