--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img src="images/workexp/excel.svg" alt="Microsoft Excel" class="skills-logo">
+                            <img src="images/workexp/excel.svg" alt="Microsoft Excel" class="skill-icon">
                         </div>
                         <p class="skill-title">Microsoft Excel</p>
                     </div>
