update image and sizing

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img src="images/workexp/excel.svg" alt="Microsoft Excel" class="skill-icon">
+                            <img class="skill-icon" src="images/skills/excel.svg" alt="Microsoft Excel">
                         </div>
                         <p class="skill-title">Microsoft Excel</p>
                     </div>
