--- a/index.html
+++ b/index.html
@@ -377,19 +377,19 @@
                 <div class="large-breakpoint">
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/brain.svg" alt="Design Thinking">
+                            <img class="skills-logo skill-icon" src="images/skills/brain.svg" alt="Design Thinking">
                         </div>
                         <p class="skill-title">Design Thinking</p>
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/excel.svg" alt="Microsoft Excel">
+                            <img class="skills-logo skill-icon" src="images/skills/excel.svg" alt="Microsoft Excel">
                         </div>
                         <p class="skill-title">Microsoft Excel</p>
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/html-5.svg" alt="HTML 5">
+                            <img class="skills-logo skill-icon" src="images/skills/html-5.svg" alt="HTML 5">
                         </div>
                         <p class="skill-title">HTML 5</p>
                     </div>
@@ -397,19 +397,19 @@
                 <div class="large-breakpoint">
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/interaction.svg" alt="Communication">
+                            <img class="skills-logo skill-icon" src="images/skills/interaction.svg" alt="Communication">
                         </div>
                         <p class="skill-title">Communication</p>
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/javascript.svg" alt="javascript">
+                            <img class="skills-logo skill-icon" src="images/skills/javascript.svg" alt="javascript">
                         </div>
                         <p class="skill-title">Javascript</p>
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/leader.svg" alt="Team leadership">
+                            <img class="skills-logo skill-icon" src="images/skills/leader.svg" alt="Team leadership">
                         </div>
                         <p class="skill-title">Team Leadership</p>
                     </div>
@@ -417,19 +417,19 @@
                 <div class="large-breakpoint">
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/computer.svg" alt="Data Analytics">
+                            <img class="skills-logo skill-icon" src="images/skills/computer.svg" alt="Data Analytics">
                         </div>
                         <p class="skill-title">Data Analytics</p>
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/css.svg" alt="css">
+                            <img class="skills-logo skill-icon" src="images/skills/css.svg" alt="css">
                         </div>
                         <p class="skill-title">CSS</p>
                     </div>
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
-                            <img class="skills-logo" src="images/skills/product.svg" alt="Product Design">
+                            <img class="skills-logo skill-icon" src="images/skills/product.svg" alt="Product Design">
                         </div>
                         <p class="skill-title">Product Design</p>
                     </div>
