--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="col-xs-12 main" data-spy="scroll" data-target="#sidenav" data-offset="0" >
         <div id="top"class="main-title text-sm-center mb-5 img-fluid">
-            <h3 class="display-3 introduction">HI, I'M HAMZA SHAIKH </h3>
+            <h3 class="introduction">HI, I'M HAMZA SHAIKH </h3>
             <p class="designation">CPA (in-progress), Entrepreneur, Front-End Web Developer </p>
         </div>
 
