--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </section>
 <!-- PROJECTS -->
             <h1 class="content-heading" id="projects">PROJECTS</h1>
-            <div class="center-container d-flex flex-wrap">
+            <section class="center-container d-flex flex-wrap">
                 <!-- INTERACTIVE PHOTO GALLERY -->
                 <div class= "project-thumbnail">
                     <div class="mb-3 d-flex">
@@ -329,10 +329,10 @@
                     </div>
 
                 </div>                   
-            </div>
+            </section>
 <!-- EDUCATION -->
             <h1 class="content-heading" id="education">EDUCATION</h1>
-            <div class="">
+            <section class="">
                 <!-- GDIP Section -->
                 <div class="card border-0 mx-2 mb-5">
                     <p class="degree-header">Rotman School of Management</p>
@@ -369,10 +369,10 @@
                     </div>
                 </div>
                 <!-- TEAM TREEHOUSE SECTION END -->
-            </div>
+            </section>
 <!-- SKILLS -->
             <h1 class="content-heading" id="skill">SKILLS</h1>
-            <div class="skill-container">      
+            <section class="skill-container">      
                 <div class="large-breakpoint">
                     <div class="skill-group">
                         <div class="d-flex justify-content-center">
@@ -434,11 +434,11 @@
                     </div>
 
                 </div>
-            </div>      
+            </section>      
 <!-- CONTACT -->
             <h1 class="content-heading" id="contact">Want to Get in Touch?</h1>
             <p>Send me a message on the following platforms:</p>
-            <div class="d-flex contact-container">
+            <section class="d-flex contact-container">
                 <a href="https://github.com/hamzashaikh123" target="_blank">
                     <div class="contact-icon">
                         <svg viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><path class="contact-img-github" d="m12 .5c-6.63 0-12 5.28-12 11.792 0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56 4.801-1.548 8.236-5.97 8.236-11.173 0-6.512-5.373-11.792-12-11.792z" fill="#212121"/></svg>                
@@ -454,7 +454,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path class="contact-img-gmail" d="M464 64H48C21.504 64 0 85.504 0 112v288c0 26.496 21.504 48 48 48h416c26.496 0 48-21.504 48-48V112c0-26.496-21.504-48-48-48zm-56.512 32L256 215.616 104.512 96h302.976zM448 416H64V148.672l192 147.68L448 148.64V416z"/></svg>                
                     </div>
                 </a>
-            </div>
+            </section>
         </div>
     </div>
     <!-- Optional JavaScript -->
